--- a/src/main/resources/com/math_app/login.fxml
+++ b/src/main/resources/com/math_app/login.fxml
@@ -9,7 +9,7 @@
    <children>
       <PasswordField fx:id="password" layoutX="226.0" layoutY="124.0" />
       <TextField fx:id="username" layoutX="226.0" layoutY="83.0" />
-      <Button layoutX="261.0" layoutY="343.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Submit" />
+      <Button fx:id="loginButton" layoutX="261.0" layoutY="343.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Log In" />
       <Label layoutX="260.0" layoutY="17.0" prefHeight="48.0" prefWidth="101.0" text="Login">
          <font>
             <Font name="System Bold" size="27.0" />
