--- a/src/main/resources/com/math_app/exercise.fxml
+++ b/src/main/resources/com/math_app/exercise.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.math_app.Exercise">
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.math_app.Exercise">
    <children>
        <ImageView fx:id="backButton" fitHeight="91.0" fitWidth="105.0" layoutX="44.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
            <image>
@@ -19,13 +18,18 @@
             <Font name="System Bold" size="50.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="424.0" layoutY="159.0" prefHeight="73.0" prefWidth="177.0" text="1 + 1 ">
+      <Label fx:id="questionLabel" alignment="CENTER" layoutX="424.0" layoutY="159.0" prefHeight="73.0" prefWidth="177.0" text="1 + 1 ">
          <font>
             <Font name="System Bold" size="50.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="202.0" layoutY="327.0" prefHeight="131.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-background-radius: 100;" text="Label" />
-      <Label alignment="CENTER" layoutX="424.0" layoutY="327.0" prefHeight="131.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-background-radius: 100;" text="Label" />
-      <Label alignment="CENTER" layoutX="649.0" layoutY="327.0" prefHeight="131.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-background-radius: 100;" text="Label" />
+      <Label fx:id="number1" alignment="CENTER" layoutX="202.0" layoutY="327.0" prefHeight="131.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-background-radius: 100;" text="Label" />
+      <Label fx:id="number2" alignment="CENTER" layoutX="424.0" layoutY="327.0" prefHeight="131.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-background-radius: 100;" text="Label" />
+      <Label fx:id="number3" alignment="CENTER" layoutX="649.0" layoutY="327.0" prefHeight="131.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-background-radius: 100;" text="Label" />
+      <Label fx:id="resultLabel" alignment="CENTER" layoutX="398.0" layoutY="540.0" prefHeight="73.0" prefWidth="229.0" text="Label">
+         <font>
+            <Font name="System Bold" size="38.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
